<resources>
    <string name="app_name">TV Show</string>
    <string name="text_welcome">MANG BẠN ĐẾN VỚI THẾ GIỚI GIẢI TRÍ</string>
    <string name="read_more">Đọc Thêm</string>
    <string name="read_less">Rút Gọn</string>
    <string name="website">WEBSITE</string>
    <string name="tv_shows_db">tv_shows_db</string>
    <string name="watch_list">Danh Sách Xem</string>
    <string name="search">Tìm Kiếm</string>
    <string name="dev">Về Tôi</string>
    <string name="tv_show">Chương Trình TV</string>
    <string name="episodes">Các Tập</string>
    <string name="episode_format">Tập | %s</string>
    <string name="rating_format">%.2f</string>
    <string name="minutes">Min</string>
    <string name="n_a">N/A</string>
    <string name="delete_from_watch_list">Xóa Khỏi Danh Sách Đang Xem</string>
    <string name="add_into_watch_list">Thêm Vào Danh Sách Đang Xem</string>
</resources>