<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_red">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_logo"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/_20sdp"
                android:src="@drawable/image_menu"
                app:layout_constraintDimensionRatio="H,30:8"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view_container_img_tv_show"
                android:layout_width="@dimen/_125sdp"
                android:layout_height="@dimen/_125sdp"
                android:layout_margin="@dimen/_20sdp"
                android:background="@drawable/border_view_layout_menu"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_logo" />

            <ImageView
                android:id="@+id/img_tv_show"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:background="@android:color/transparent"
                android:scaleType="fitXY"
                android:src="@drawable/image_tv_show"
                app:layout_constraintBottom_toBottomOf="@id/view_container_img_tv_show"
                app:layout_constraintEnd_toEndOf="@id/view_container_img_tv_show"
                app:layout_constraintStart_toStartOf="@id/view_container_img_tv_show"
                app:layout_constraintTop_toTopOf="@id/view_container_img_tv_show" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:text="@string/tv_show"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/view_container_img_tv_show"
                app:layout_constraintEnd_toEndOf="@id/view_container_img_tv_show"
                app:layout_constraintStart_toStartOf="@id/view_container_img_tv_show" />

            <View
                android:id="@+id/view_container_img_watch_list"
                android:layout_width="@dimen/_125sdp"
                android:layout_height="@dimen/_125sdp"
                android:layout_margin="@dimen/_20sdp"
                android:background="@drawable/border_view_layout_menu"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_logo" />

            <ImageView
                android:id="@+id/img_watch_list"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:background="@android:color/transparent"
                android:scaleType="fitXY"
                android:src="@drawable/image_watch_list"
                app:layout_constraintBottom_toBottomOf="@id/view_container_img_watch_list"
                app:layout_constraintEnd_toEndOf="@id/view_container_img_watch_list"
                app:layout_constraintStart_toStartOf="@id/view_container_img_watch_list"
                app:layout_constraintTop_toTopOf="@id/view_container_img_watch_list" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:text="@string/watch_list"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/view_container_img_watch_list"
                app:layout_constraintEnd_toEndOf="@id/view_container_img_watch_list"
                app:layout_constraintStart_toStartOf="@id/view_container_img_watch_list" />

            <View
                android:id="@+id/view_container_img_search"
                android:layout_width="@dimen/_125sdp"
                android:layout_height="@dimen/_125sdp"
                android:layout_margin="@dimen/_20sdp"
                android:background="@drawable/border_view_layout_menu"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_container_img_tv_show" />

            <ImageView
                android:id="@+id/img_search"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:background="@android:color/transparent"
                android:scaleType="fitXY"
                android:src="@drawable/image_search"
                app:layout_constraintBottom_toBottomOf="@id/view_container_img_search"
                app:layout_constraintEnd_toEndOf="@id/view_container_img_search"
                app:layout_constraintStart_toStartOf="@id/view_container_img_search"
                app:layout_constraintTop_toTopOf="@id/view_container_img_search" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:text="@string/search"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/view_container_img_search"
                app:layout_constraintEnd_toEndOf="@id/view_container_img_search"
                app:layout_constraintStart_toStartOf="@id/view_container_img_search" />

            <View
                android:id="@+id/view_container_img_dev"
                android:layout_width="@dimen/_125sdp"
                android:layout_height="@dimen/_125sdp"
                android:layout_margin="@dimen/_20sdp"
                android:background="@drawable/border_view_layout_menu"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_container_img_watch_list" />

            <ImageView
                android:id="@+id/img_dev"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:background="@android:color/transparent"
                android:scaleType="fitXY"
                android:src="@drawable/image_dev"
                app:layout_constraintBottom_toBottomOf="@id/view_container_img_dev"
                app:layout_constraintEnd_toEndOf="@id/view_container_img_dev"
                app:layout_constraintStart_toStartOf="@id/view_container_img_dev"
                app:layout_constraintTop_toTopOf="@id/view_container_img_dev" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:text="@string/dev"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/view_container_img_dev"
                app:layout_constraintEnd_toEndOf="@id/view_container_img_dev"
                app:layout_constraintStart_toStartOf="@id/view_container_img_dev" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>