<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="isLoading"
            type="boolean" />
        <variable
            name="tvShowImageUrl"
            type="String" />
        <variable
            name="tvShowName"
            type="String" />
        <variable
            name="networkCountry"
            type="String" />
        <variable
            name="status"
            type="String" />
        <variable
            name="startDate"
            type="String" />
        <variable
            name="desc"
            type="String" />
        <variable
            name="rating"
            type="String" />
        <variable
            name="genre"
            type="String" />
        <variable
            name="runtime"
            type="String" />
        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutContainerTVShowDetails"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:background="@color/background"
        tools:context=".view.activity.TVShowDetailsActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/sliderViewPager"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHeight_percent="0.3"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0" />

                <View
                    android:id="@+id/viewFadingEdge"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:background="@drawable/background_fading_edge"
                    app:layout_constraintBottom_toBottomOf="@id/sliderViewPager"
                    app:layout_constraintHeight_percent="0.05" />

                <LinearLayout
                    android:id="@+id/layoutSliderIndicators"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="@dimen/_8sdp"
                    app:layout_constraintBottom_toBottomOf="@id/viewFadingEdge" />

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/imgAvatar"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:imageUrl="@{tvShowImageUrl}"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="@id/sliderViewPager"
                    app:layout_constraintHeight_percent="0.3"
                    app:layout_constraintHorizontal_bias="0.05"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/sliderViewPager"
                    app:layout_constraintWidth_percent="0.3" />

                <TextView
                    android:id="@+id/textNetWorkCountry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:text='@{networkCountry}'
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toRightOf="@id/imgAvatar"
                    app:layout_constraintBottom_toBottomOf="@id/imgAvatar"
                    app:layout_constraintVertical_bias="0"
                    app:layout_constraintTop_toBottomOf="@id/layoutSliderIndicators" />

                <TextView
                    android:id="@+id/textStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:text="@{status}"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toRightOf="@id/imgAvatar"
                    app:layout_constraintBottom_toBottomOf="@id/imgAvatar"
                    app:layout_constraintVertical_bias="0.5"
                    app:layout_constraintTop_toBottomOf="@id/layoutSliderIndicators" />

                <TextView
                    android:id="@+id/textStartDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:text="@{startDate}"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toRightOf="@id/imgAvatar"
                    app:layout_constraintTop_toBottomOf="@id/layoutSliderIndicators"
                    app:layout_constraintBottom_toBottomOf="@id/imgAvatar"
                    app:layout_constraintVertical_bias="1"/>

                <TextView
                    android:id="@+id/textTVShowName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@{tvShowName}"
                    android:textSize="@dimen/_15ssp"
                    android:textColor="@color/yellow"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/imgAvatar" />

                <TextView
                    android:id="@+id/textDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:ellipsize="end"
                    android:maxLines="4"
                    android:text="@{desc}"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_11ssp"
                    app:layout_constraintTop_toBottomOf="@id/textTVShowName" />

                <TextView
                    android:id="@+id/textReadMore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/read_more"
                    android:textColor="@color/red"
                    android:textSize="@dimen/_13ssp"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="@id/textDesc"
                    app:layout_constraintTop_toBottomOf="@id/textDesc" />

                <LinearLayout
                    android:id="@+id/layoutRateGenderRuntime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@id/textReadMore">

                    <ImageView
                        android:id="@+id/imgRating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_star"
                        android:visibility="gone"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/textRating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text='@{" "+rating}'
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:visibility="gone" />

                    <View
                        android:id="@+id/viewDivider1"
                        android:layout_width="@dimen/_1sdp"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/_5sdp"
                        android:background="@color/white"
                        android:visibility="gone" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{genre}"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <View
                        android:id="@+id/viewDivider2"
                        android:layout_width="@dimen/_1sdp"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/_5sdp"
                        android:background="@color/white"
                        android:visibility="gone" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{runtime}"
                        android:textColor="@color/white"
                        android:textStyle="bold" />
                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnWeb"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:backgroundTint="@color/green"
                    android:text="@string/website"
                    android:textColor="@color/black"
                    android:visibility="gone"
                    app:cornerRadius="@dimen/_10sdp"
                    app:layout_constraintHorizontal_bias="0.1"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/layoutRateGenderRuntime"
                    app:layout_constraintWidth_percent="0.4" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnEpisode"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:backgroundTint="@color/yellow"
                    android:text="@string/episodes"
                    android:textColor="@color/black"
                    android:visibility="gone"
                    app:cornerRadius="@dimen/_10sdp"
                    app:layout_constraintHorizontal_bias="0.9"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/layoutRateGenderRuntime"
                    app:layout_constraintWidth_percent="0.4" />

                <ImageView
                    android:id="@+id/imgBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:background="@drawable/background_back_button"
                    android:src="@drawable/ic_back"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <ProgressBar
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:visibility="@{isLoading ? View.VISIBLE : View.GONE, default=gone}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgWatchList"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_margin="@dimen/_30sdp"
            android:background="@drawable/background_fab"
            android:src="@drawable/ic_watch_list"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:ignore="ContentDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>